<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/mobilite_nav"
    app:startDestination="@id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appclima.ui.HomeFragment"
        android:label="@string/title_note"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.appclima.ui.DashboardFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.appclima.ui.NotificationsFragment"
        android:label="@string/title_acount"
        tools:layout="@layout/fragment_notifications" />
</navigation>